--- a/findfriends.html
+++ b/findfriends.html
@@ -198,13 +198,13 @@ var obj = [
   text2: 'Clement'
 }
 {
-  img: 'http://i63.tinypic.com/10xzno6.jpg',
-  text2: 'Clement'
+  img: 'http://i65.tinypic.com/25u5t8n.jpg',
+  text2: 'Tiffany Yu'
 }	
 ];
 
 function changeText() {
-	var num = Math.floor(Math.random() * 2);
+	var num = Math.floor(Math.random() * 3);
 	document.getElementById('img').src = obj[num].img;
 	document.getElementById('text2').innerHTML = "Hi I'm " + obj[num].text2;
 }
