--- a/findfriends.html
+++ b/findfriends.html
@@ -195,7 +195,7 @@ var obj = [
 function changeText() {
 	var num = Math.floor(Math.random() * 3);
 	document.getElementById('img').src = obj[num].img;
-	document.getElementById('text2').innerHTML = "Hi I'm " + obj[num].text2;
+	document.getElementById('text2').innerHTML = obj[num].text2;
 }
 </script>
   
