--- a/findfriends.html
+++ b/findfriends.html
@@ -189,7 +189,7 @@ var obj = [
 function changeText() {
 	var num = Math.floor(Math.random() * 3);
 	document.getElementById('img').src = obj[num].img;
-	document.getElementById('name').innerHTML = "Hi, I'm "+obj[num].text2;
+	document.getElementById('name').innerHTML = "Hi, I'm "+ obj[num].name;
 }
 </script>
   
