--- a/findfriends.html
+++ b/findfriends.html
@@ -177,30 +177,30 @@
 var obj = [
 {
 	img: 'http://i63.tinypic.com/1hz4w7.jpg',
-  	name: 'Jonathan C'
-	drink: 'HK Style  MT'
-	fact: 'working at Honeyberry'
+  	name: 'Jonathan C',
+	drink: 'HK Style  MT',
+	fact: 'working at Honeyberry',
 	place: 'Honeyberry'
 },
 {
   	img: 'http://i65.tinypic.com/16kt102.jpg',
-  	name: 'Sammi C'
-	drink: 'Honey milk tea w/ boba and lychee jelly'
-	fact: 'I smell mostly everything. '
+  	name: 'Sammi C',
+	drink: 'Honey milk tea w/ boba and lychee jelly',
+	fact: 'I smell mostly everything. ',
 	place: '85°'
 },
 {
   	img: 'http://i63.tinypic.com/10xzno6.jpg',
-  	name: 'Clement N'
-	drink: 'agarose gel'
-	fact: 'being a pesca-pescatarian.'
+  	name: 'Clement N',
+	drink: 'agarose gel',
+	fact: 'being a pesca-pescatarian.',
 	place: 'McDonalds'
 },
 {
   	img: 'http://i65.tinypic.com/25u5t8n.jpg',
-  	name: 'Tiffany Yu'
-	drink: '0% sugar, no ice, iced jasmine milk green tea with boba '
-	fact: 'having more testosterone than most men'
+  	name: 'Tiffany Yu',
+	drink: '0% sugar, no ice, iced jasmine milk green tea with boba ',
+	fact: 'having more testosterone than most men',
 	place: 'T4 '
 }	
 ];
