--- a/findfriends.html
+++ b/findfriends.html
@@ -178,29 +178,29 @@ var obj = [
 {
 	img: 'http://i63.tinypic.com/1hz4w7.jpg',
   	name: 'Jonathan C',
-	drink: 'HK Style  MT',
 	fact: 'working at Honeyberry',
+	drink: 'HK Style  MT',
 	place: 'Honeyberry'
 },
 {
   	img: 'http://i65.tinypic.com/16kt102.jpg',
   	name: 'Sammi C',
-	drink: 'Honey milk tea w/ boba and lychee jelly',
 	fact: 'I smell mostly everything. ',
+	drink: 'Honey milk tea w/ boba and lychee jelly',
 	place: '85°'
 },
 {
   	img: 'http://i63.tinypic.com/10xzno6.jpg',
   	name: 'Clement N',
-	drink: 'agarose gel',
 	fact: 'being a pesca-pescatarian.',
+	drink: 'agarose gel',
 	place: 'McDonalds'
 },
 {
   	img: 'http://i65.tinypic.com/25u5t8n.jpg',
   	name: 'Tiffany Yu',
-	drink: '0% sugar, no ice, iced jasmine milk green tea with boba ',
 	fact: 'having more testosterone than most men',
+	drink: '0% sugar, no ice, iced jasmine milk green tea with boba ',
 	place: 'T4 '
 }	
 ];
@@ -208,10 +208,10 @@ var obj = [
 function changeText() {
 	var num = Math.floor(Math.random() * 4);
 	document.getElementById('img').src = obj[num].img;
-	document.getElementById('name').innerHTML = "Hi, I'm "+ obj[num].name;
-	document.getElementById('fact').innerHTML = "Besides "+ obj[num].fact + ",";
-	document.getElementById('drink').innerHTML = " I also love drinking "+obj[num].drink;
-	document.getElementById('place').innerHTML = " at " + obj[num].place;
+	document.getElementById('name').innerHTML = "Hi, I'm "+ obj[num].name + ".";
+	document.getElementById('fact').innerHTML = " Besides "+ obj[num].fact + ",";
+	document.getElementById('drink').innerHTML = " I also love drinking "+obj[num].drink + ".";
+	document.getElementById('place').innerHTML = "Maybe we could get boba and hang out at " + obj[num].place + "one day!";
 	
 }
 </script>
