--- a/findfriends.html
+++ b/findfriends.html
@@ -185,14 +185,14 @@ var obj = [
 {
   	img: 'http://i65.tinypic.com/16kt102.jpg',
   	name: 'Sammi C',
-	fact: 'I smell mostly everything. ',
+	fact: 'smelling mostly everything',
 	drink: 'Honey milk tea w/ boba and lychee jelly',
 	place: '85°'
 },
 {
   	img: 'http://i63.tinypic.com/10xzno6.jpg',
   	name: 'Clement N',
-	fact: 'being a pesca-pescatarian.',
+	fact: 'being a pesca-pescatarian',
 	drink: 'agarose gel',
 	place: 'McDonalds'
 },
@@ -200,7 +200,7 @@ var obj = [
   	img: 'http://i65.tinypic.com/25u5t8n.jpg',
   	name: 'Tiffany Yu',
 	fact: 'having more testosterone than most men',
-	drink: '0% sugar, no ice, iced jasmine milk green tea with boba ',
+	drink: '0% sugar, no ice, iced jasmine milk green tea with boba',
 	place: 'T4 '
 }	
 ];
