--- a/findfriends.html
+++ b/findfriends.html
@@ -197,14 +197,14 @@ var obj = [
 	place: '85°'
 },
 {
-  	img: 'http://i67.tinypic.com/ofdd1w.jpg', // placeholder pic 
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', // placeholder pic 
   	name: 'Vincent Y',
 	fact: 'having black hair',
 	drink: 'Okinawa milk tea w small boba',
 	place: 'T4'
 },
 {
-  	img: 'http://i67.tinypic.com/ofdd1w.jpg', // placeholder pic
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', // placeholder pic
   	name: 'Kelly L',
 	fact: 'petting my new dog',
 	drink: 'Jasmine Milk Tea with no toppings',
