--- a/findfriends.html
+++ b/findfriends.html
@@ -101,13 +101,9 @@
 
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h3 class="margin">Friend</h3><br>
-  
-  
-  
+ <h3 class="margin">Find A Friend</h3><br>
       <div class="row">
     <div class="col-sm-4">
-      
     </div>
     <div class="col-sm-4"> 
     <p>
@@ -116,19 +112,13 @@
 	<span id="fact"></span>
 	<span id="drink"></span>
 	<span id="place"></span>
-	
     </p>
       <button class="button" type="button" onclick="changeText()"> Find Friends</button> 
     </div>
     <div class="col-sm-4"> 
-
     </div>
   </div>
-
 </div>
-  
-
-  
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
@@ -170,10 +160,9 @@
                           , "Jonathan Chai being a stinky house", "needing help with TextExcel (which also means Parsa needs help)"
                           , "Jonathan not having pink hair", "liking trains", "liking to eat stir fried squash and deep fried tofu and getting Chicken Bakes from Costco [:"
                           , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus"];
-    
-
   </script>
   <script>
+	  
 var obj = [
 {
 	img: 'http://i63.tinypic.com/1hz4w7.jpg',
