--- a/findfriends.html
+++ b/findfriends.html
@@ -228,7 +228,7 @@ var obj = [
 	place: 'McDonalds'
 },
 {
-  	img: 'http://i65.tinypic.com/25u5t8n.jpg',
+  	img: 'http://i66.tinypic.com/2zxv7t5.jpg',
   	name: 'Nicolas H',
 	fact: 'not finishing textExcel',
 	drink: 'Black Horlick Milk Tea',
