--- a/findtea.html
+++ b/findtea.html
@@ -91,7 +91,7 @@
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Our Tea Picks</h3><br>
+  <h3 class="margin">Our Weekly Tea Picks</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p>Honey Milk Tea at ShareTea</p>
