--- a/findfriends.html
+++ b/findfriends.html
@@ -50,9 +50,10 @@
       color: #1abc9c !important;
   }
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+    border-radius: 12px;
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
@@ -63,12 +64,6 @@
     transition-duration: 0.4s;
     cursor: pointer;
 }
-    .button {
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
-}
-
 .button:hover {
     background-color: #555555;
     color: white;
