--- a/findfriends.html
+++ b/findfriends.html
@@ -52,7 +52,7 @@
 .button {
     background-color: white;
     color: black;
-    /*border: 2px solid #555555;*/
+    border: 2px solid #555555;
     border-radius: 12px;
     
     text-align: center;
