--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@
 <body>
 
   
-<div id="map" style="width:100%;height:500px"></div>
+<!--<div id="map" style="width:100%;height:500px"></div>-->
 
   
 <!-- Navbar -->
@@ -91,7 +91,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
- <!--<div id="googleMap" style="width:100%;height:400px;"></div>-->
+ <div id="map" style="width:100%;height:500px"></div>
 </div>
 
 <!-- Third Container (Grid) -->
