--- a/findtea.html
+++ b/findtea.html
@@ -52,8 +52,13 @@
   }
   </style>
 </head>
+
 <body>
 
+  
+<!--<div id="map" style="width:100%;height:500px"></div>-->
+
+  
 <!-- Navbar -->
 <nav class="navbar navbar-default">
   <div class="container">
@@ -86,7 +91,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
- <div id="googleMap" style="width:100%;height:400px;"></div>
+ <div id="map" style="width:100%;height:500px"></div>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -108,24 +113,22 @@
   </div>
 </div>
 
- <script>
-
+<script>
 function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(37.6010, -122.3921),
-    zoom:20,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+  var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+  var mapCanvas = document.getElementById("map");
+  var mapOptions = {center: myCenter, zoom: 5};
+  var map = new google.maps.Map(mapCanvas, mapOptions);
+  var marker = new google.maps.Marker({position:myCenter});
+  marker.setMap(map);
 }
 </script>
-  
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVxWrOKPxjSHOhgj5xN3GhPuLyQ5F7s44&callback=myMap"></script>
 
-  
-<!-- Footer -->
+<script src="https://maps.googleapis.com/maps/api/js?key= AIzaSyCrYvjKTrKm3jWq9gOR5rg1QPR_GeVAslQ&callback=myMap"></script>
+
+  <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p><a href="more.html"> Donna likes oolong milktea.</a></p>
 </footer>
-
 </body>
 </html>
