--- a/test.html
+++ b/test.html
@@ -115,12 +115,16 @@
 
 <script>
 function myMap() {
-  var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+  var myCenter = new google.maps.LatLng(37.6010,-122.3921);
   var mapCanvas = document.getElementById("map");
   var mapOptions = {center: myCenter, zoom: 5};
   var map = new google.maps.Map(mapCanvas, mapOptions);
   var marker = new google.maps.Marker({position:myCenter});
   marker.setMap(map);
+  var infowindow = new google.maps.InfoWindow({
+    content: "T4"
+  });
+  infowindow.open(map,marker);
 }
 </script>
 
