--- a/test.html
+++ b/test.html
@@ -122,7 +122,7 @@ function myMap() {
   var marker = new google.maps.Marker({position:myCenter});
   marker.setMap(map);
   var infowindow = new google.maps.InfoWindow({
-    content: "T4"
+    content: "Hello, World!"
   });
   infowindow.open(map,marker);
 }
