--- a/test.html
+++ b/test.html
@@ -50,6 +50,9 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
+  .AnyUnusedClassName {
+      color: #000000;
+}
   </style>
 </head>
 
@@ -122,7 +125,7 @@ function myMap() {
   var marker = new google.maps.Marker({position:myCenter});
   marker.setMap(map);
   var infowindow = new google.maps.InfoWindow({
-    content: "Hello, World!"
+    content: "T4"
   });
   infowindow.open(map,marker);
 }
