--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
-  .AnyUnusedClassName {
+  .map {
       color: #000000;
 }
   </style>
