--- a/findfriends.html
+++ b/findfriends.html
@@ -109,7 +109,7 @@
 	<span id="drink"></span>
 	<span id="place"></span>
     </p>
-      <button class="button" type="button" onclick="changeText()"> Find Friends</button> 
+      <button class="button" type="button" onclick="changeText()"> <span class = "glyphicon glyphicon-search"></span> Find Friends</button> 
     </div>
     <div class="col-sm-4"> 
     </div>
