--- a/findtea.html
+++ b/findtea.html
@@ -19,7 +19,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #F6E18C; /* yellow */
+      background-color: #B3F68C; /* ygreen */
       color: #ffffff;
   }
   .bg-2 { 
