--- a/findtea.html
+++ b/findtea.html
@@ -19,7 +19,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #f7bf8f; /* ygreen */
+      background-color: #f6b67f; /* ygreen */
       color: #ffffff;
   }
   .bg-2 { 
