--- a/about.html
+++ b/about.html
@@ -92,6 +92,14 @@
  <p>Hi friends! We've created a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with Frentea! We'll be sure to FILTER out all those fake tea friends. </p>
 </div>
 
+  
+  
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">What's boba?</h3><br>
+  <p>Boba tea (also called pearl tea, or bubble tea) is a sweet drink that combines milk, flavored tea and tapioca pearls. </p>
+  
+</div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
@@ -115,11 +123,6 @@
   </div>
   </div>
 
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin"></h3><br>
-  
-</div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
