--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Want to find a perfect tea match? </h3>
   <p> Start your search here! </p>
+   <a href="findfriends.html" class="btn btn-default btn-lg">
+    <span class = "glyphicon glyphicon-search"></span> Find Friends
+  </a>
   </div>
 
 <!-- Third Container (Grid) -->
