--- a/findfriends.html
+++ b/findfriends.html
@@ -252,14 +252,14 @@ var obj = [
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i66.tinypic.com/2di1tp2.jpg', 
   	name: 'Claudia T',
 	fact: 'Jonathan not having pink hair',
 	drink: 'roasted oolong milk tea with boba/grass jelly and i use honey as the sweetener',
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i65.tinypic.com/33neo9y.jpg', 
   	name: 'Tommy P',
 	fact: 'liking trains',
 	drink: 'Potted Plant with Boba',
@@ -273,7 +273,7 @@ var obj = [
 	place: 'Tiger Tea'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i63.tinypic.com/15psu2s.jpg', 
   	name: 'Bethany W',
 	fact: 'loving tea',
 	drink: 'Jasmine milk tea w boba',
@@ -287,21 +287,21 @@ var obj = [
 	place: 'Bambu'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'hhttp://i68.tinypic.com/2ds1ilg.jpg', 
   	name: 'Galina I',
 	fact: 'I like math.',
 	drink: 'Coffee Milk Tea with boba',
 	place: 'Tiger Tea'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i64.tinypic.com/6oos92.jpg', 
   	name: 'Herman P',
 	fact: 'wearing a scarlet A on my chest',
 	drink: 'Thai Tea with Boba',
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i65.tinypic.com/2n1e0lf.jpg', 
   	name: 'Alex F',
 	fact: 'pointing out that Jonathan has yellow hair now',
 	drink: 'honey green tea ',
