--- a/findfriends.html
+++ b/findfriends.html
@@ -287,7 +287,7 @@ var obj = [
 	place: 'Bambu'
 },
 {
-  	img: 'hhttp://i68.tinypic.com/2ds1ilg.jpg', 
+  	img: 'http://i68.tinypic.com/2ds1ilg.jpg', 
   	name: 'Galina I',
 	fact: 'I like math.',
 	drink: 'Coffee Milk Tea with boba',
