--- a/findfriends.html
+++ b/findfriends.html
@@ -289,7 +289,7 @@ var obj = [
 {
   	img: 'http://i68.tinypic.com/2ds1ilg.jpg', 
   	name: 'Galina I',
-	fact: 'I like math.',
+	fact: 'liking math.',
 	drink: 'Coffee Milk Tea with boba',
 	place: 'Tiger Tea'
 },
