--- a/findfriends.html
+++ b/findfriends.html
@@ -182,14 +182,14 @@ var obj = [
 	place: '85°'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', // placeholder pic 
+  	img: 'http://i64.tinypic.com/tajvgw.jpg', 
   	name: 'Vincent Y',
 	fact: 'having black hair',
 	drink: 'Okinawa milk tea w small boba',
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', // placeholder pic
+  	img: 'http://i65.tinypic.com/2q883kn.jpg', 
   	name: 'Kelly L',
 	fact: 'petting my new dog',
 	drink: 'Jasmine Milk Tea with no toppings',
@@ -266,7 +266,7 @@ var obj = [
 	place: 'T4'
 },
 {
-  	img: 'http://i65.tinypic.com/33neo9y.jpg', //Placeholder Pic
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
   	name: 'Mimi N.',
 	fact: 'I like eating stir fried squash and deep fried tofu. I also really like eating Chicken Bakes from Costco [: ',
 	drink: 'Coffee Milk Tea w boba',
@@ -280,7 +280,7 @@ var obj = [
 	place: 'Eggettes'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i65.tinypic.com/24cegz7.jpg', //Placeholder Pic
   	name: 'Amanda Hall',
 	fact: 'dabbing',
 	drink: 'peach lychee green tea w boba',
@@ -308,14 +308,14 @@ var obj = [
 	place: 'eggettes'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i68.tinypic.com/24pgqqt.jpg',
   	name: 'Matthew C',
 	fact: 'math being in my name and loving Calculus',
 	drink: 'Earl Grey Milk Tea w/ Boba',
 	place: 'Sharetea / Tiger Tea'
 },
 {
-  	img: 'https://vignette1.wikia.nocookie.net/parody/images/c/c9/Charlie.png/revision/latest?cb=20150918191308', //Placeholder Pic
+  	img: 'http://i66.tinypic.com/zvx1di.jpg', 
   	name: 'Kaitlyn Chan',
 	fact: 'turning around whenever someone says the word \'Totoro\'',
 	drink: 'roasted oolong tea with sea salt foam',
