--- a/findfriends.html
+++ b/findfriends.html
@@ -280,7 +280,7 @@ var obj = [
 	place: 'Eggettes'
 },
 {
-  	img: 'http://i65.tinypic.com/24cegz7.jpg', //Placeholder Pic
+  	img: 'http://i65.tinypic.com/24cegz7.jpg', 
   	name: 'Amanda Hall',
 	fact: 'dabbing',
 	drink: 'peach lychee green tea w boba',
@@ -327,8 +327,14 @@ var obj = [
 	fact: 'being able to grow a beard (hell yeah)',
 	drink: 'Jasmine Milk Tea with Boba',
 	place: 'T4'
+},
+{
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //placeholder pic
+  	name: 'Brandon L',
+	fact: 'being a politics junkie ahem',
+	drink: 'Jasmine Milk Tea con Boba',
+	place: '7 leaves'
 }
-
 ];
 
 function changeText() {
