--- a/findfriends.html
+++ b/findfriends.html
@@ -97,7 +97,7 @@
 
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h3 class="margin">Find a Friend</h3><br>
+ <h3 class="margin">Find your tea match here!</h3><br>
       <div class="row">
     <div class="col-sm-4">
     </div>
