--- a/findfriends.html
+++ b/findfriends.html
@@ -267,7 +267,7 @@ var obj = [
 },
 {
   	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
-  	name: 'Mimi N.',
+  	name: 'Mimi N',
 	fact: 'I like eating stir fried squash and deep fried tofu. I also really like eating Chicken Bakes from Costco [: ',
 	drink: 'Coffee Milk Tea w boba',
 	place: 'Tiger Tea'
