--- a/findfriends.html
+++ b/findfriends.html
@@ -191,13 +191,13 @@ var obj = [
 {
   	img: 'http://i65.tinypic.com/2q883kn.jpg', 
   	name: 'Kelly L',
-	fact: 'petting my new dog',
+	fact: 'petting my cute dog',
 	drink: 'Jasmine Milk Tea with no toppings',
 	place: 'Teaspoon'
 },
 {
   	img: 'http://i65.tinypic.com/25u5t8n.jpg',
-  	name: 'Tiffany Yu',
+  	name: 'Tiffany Y',
 	fact: 'having more testosterone than most men',
 	drink: '0% sugar, no ice, iced jasmine milk green tea with boba',
 	place: 'T4'
@@ -218,14 +218,14 @@ var obj = [
 },
 {
   	img: 'http://i63.tinypic.com/10xzno6.jpg',
-  	name: 'Clement N',
+  	name: 'Clement Cheuk Wai Ng',
 	fact: 'being a pesca-pescatarian',
 	drink: 'agarose gel',
 	place: 'McDonalds'
 },
 {
   	img: 'http://i66.tinypic.com/2zxv7t5.jpg',
-  	name: 'Nicolas H',
+  	name: 'Nick H',
 	fact: 'not finishing textExcel',
 	drink: 'Black Horlick Milk Tea',
 	place: 'ShareTea'
@@ -239,7 +239,7 @@ var obj = [
 },
 {
   	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
-  	name: 'Klarizza',
+  	name: 'Klarizza R',
 	fact: 'Jonathan Chai being a stinky house',
 	drink: 'White peppermint mocha coffee creamer',
 	place: 'What'
@@ -281,7 +281,7 @@ var obj = [
 },
 {
   	img: 'http://i65.tinypic.com/24cegz7.jpg', 
-  	name: 'Amanda Hall',
+  	name: 'Amanda H',
 	fact: 'dabbing',
 	drink: 'peach lychee green tea w boba',
 	place: 'Bambu'
@@ -316,7 +316,7 @@ var obj = [
 },
 {
   	img: 'http://i66.tinypic.com/zvx1di.jpg', 
-  	name: 'Kaitlyn Chan',
+  	name: 'Kaitlyn C',
 	fact: 'turning around whenever someone says the word \'Totoro\'',
 	drink: 'roasted oolong tea with sea salt foam',
 	place: '85'
