--- a/findfriends.html
+++ b/findfriends.html
@@ -329,7 +329,7 @@ var obj = [
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //placeholder pic
+  	img: 'https://pbs.twimg.com/profile_images/631610148214059008/JxSejdUW_400x400.jpg', 
   	name: 'Brandon L',
 	fact: 'being a politics junkie ahem',
 	drink: 'Jasmine Milk Tea con Boba',
