--- a/findfriends.html
+++ b/findfriends.html
@@ -206,8 +206,8 @@ var obj = [
   	img: 'http://i65.tinypic.com/dz6ujq.jpg',
   	name: 'Michael C',
 	fact: 'making memes',
-	drink: 'I dont have a preference. I dont like peppermint milk tea tho',
-	place: 'I dont care! :D'
+	drink: 'I don\'t have a preference. I don\'t like peppermint milk tea tho',
+	place: 'I don\'t care! :D'
 },
 {
   	img: 'http://i63.tinypic.com/sdi8mf.jpg',
@@ -296,7 +296,7 @@ var obj = [
 {
   	img: 'http://i64.tinypic.com/6oos92.jpg', 
   	name: 'Herman P',
-	fact: 'wearing a scarlet A on my chest',
+	fact: 'being named Herman',
 	drink: 'Thai Tea with Boba',
 	place: 'T4'
 },
@@ -331,7 +331,7 @@ var obj = [
 {
   	img: 'https://pbs.twimg.com/profile_images/631610148214059008/JxSejdUW_400x400.jpg', 
   	name: 'Brandon L',
-	fact: 'being a politics junkie ahem',
+	fact: 'being a politics junkie (ahem)',
 	drink: 'Jasmine Milk Tea con Boba',
 	place: '7 leaves'
 }
