--- a/findfriends.html
+++ b/findfriends.html
@@ -149,13 +149,13 @@
   <p><a href="more.html">Sammi likes honey milktea.</a></p> 
   <script> var names = ["Jonathan C.", "Donna L", "Sammi C.", "Vincent Y", "Kelly L", "Tiffany Yu :)", "Michael C", "Melissa C" 
                         , "Clement Cheuk Wai Ng", "Nicolas H", "Leonard W.", "Klarizza", "Justin F", "Claudia T", "Tommy P"
-                        , "Mimi N.", "Bethany W", "Amanda Hall", "Galina I", "Herman P", "Alex F", "Matthew C"];
+                        , "Mimi N.", "Bethany W", "Amanda Hall", "Galina I", "Herman P", "Alex F", "Matthew C", "Lindsey W"];
            var funFact = ["working at Honeyberry", "having nine fingers", "smelling mostly everything", "having black hair"
                           , "petting my cute dog", "having more testosterone than most men", "making memes"
                           , "thinking Buster Posey is cool", "being a pesca-pescatarian", "not finishing textExcel", "FML"
                           , "Jonathan Chai being a stinky house", "needing help with TextExcel (which also means Parsa needs help)"
                           , "Jonathan not having pink hair", "liking trains", "liking to eat stir fried squash and deep fried tofu and getting Chicken Bakes from Costco [:"
-                          , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus"];
+                          , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus", "playing the ukulele"];
   </script>
   <script>
 	  
@@ -334,6 +334,13 @@ var obj = [
 	fact: 'being a politics junkie (ahem)',
 	drink: 'Jasmine Milk Tea con Boba',
 	place: '7 leaves'
+},
+{
+  	img: 'http://i63.tinypic.com/15psu2s.jpg', 
+  	name: 'Lindsey W',
+	fact: 'being able to play the ukulele',
+	drink: 'oolong with cream',
+	place: 'Tpumps'
 }
 ];
 
