--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
        <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-        <p>Sammi is an avid crafter and fan of cartoon polar bears. In her free time, she doesn't like cheese and watches that Bear cartoon that stacks in San Francisco.</p>
+        <p>Sammi is an avid crafter and fan of cartoon polar bears. In her free time, she doesn't like cheese and watches that Bear cartoon that stacks in San Francisco with Jonathan and Donna.</p>
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
@@ -118,7 +118,7 @@
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Jonathan does not have pink hair. It's yellow now. In his free time, he goes to Michaels to find exacto knives and mason jars with Sammi and Donna. </p>
+      <p>Jonathan does not have pink hair. It's yellow now. In his free time, he goes to Michaels to find exacto knives and mason jars with Sammi and Donna. He also enjoys napping on corgis. </p>
     </div>
   </div>
   </div>
