--- a/findfriends.html
+++ b/findfriends.html
@@ -329,6 +329,20 @@ var obj = [
 	place: 'T4'
 },
 {
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //placeholder pic
+  	name: 'Tiana M',
+	fact: 'stiiiiiillll not being able to drive',
+	drink: 'rose tea with boba and aloe',
+	place: 'T4'
+},
+{
+  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //placeholder pic
+  	name: 'Michelle C',
+	fact: 'accidentally doing all 40 questions on the stats final',
+	drink: 'Green milk tea w/ boba',
+	place: 'T4'
+},	
+{
   	img: 'https://pbs.twimg.com/profile_images/631610148214059008/JxSejdUW_400x400.jpg', 
   	name: 'Brandon L',
 	fact: 'being a politics junkie (ahem)',
@@ -345,7 +359,7 @@ var obj = [
 ];
 
 function changeText() {
-	var num = Math.floor(Math.random() * 26);
+	var num = Math.floor(Math.random() * 28);
 	document.getElementById('img').src = obj[num].img; 
 	document.getElementById('name').innerHTML = ":) Matched! Hi, I'm "+ obj[num].name + ".";
 	document.getElementById('fact').innerHTML = " Besides "+ obj[num].fact + ",";
