--- a/findfriends.html
+++ b/findfriends.html
@@ -118,11 +118,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">Want to find a perfect tea match? </h3>
-  <p> Start your search here! </p>
-  <a href="#" class="btn btn-default btn-lg">
-    <span class = "glyphicon glyphicon-search"></span> Find Friends
-  </a>
+  <h3 class="margin">CHANGE THIS TO SOMETHING LIKE A CUTE JONATHAN ICON</h3>
 </div>
   
  <!-- Third Container (Grid) -->
