--- a/findfriends.html
+++ b/findfriends.html
@@ -118,7 +118,7 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">CHANGE THIS TO SOMETHING LIKE A CUTE JONATHAN ICON</h3>
+  <h3 class="margin">CHANGE THIS TO SOMETHING LIKE A CUTE ICON</h3>
 </div>
   
  <!-- Third Container (Grid) -->
