--- a/findfriends.html
+++ b/findfriends.html
@@ -119,6 +119,18 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">CHANGE THIS TO SOMETHING LIKE A CUTE ICON</h3>
+   <div class="row">
+    <div class="col-sm-4">
+      <p></p>
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+      <img src="https://s-media-cache-ak0.pinimg.com/originals/52/31/c8/5231c8878862a462b93c3cc4e651b242.png" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+    </div>
+  </div>
 </div>
   
  <!-- Third Container (Grid) -->
@@ -262,7 +274,7 @@ var obj = [
 	place: 'T4'
 },
 {
-  	img: 'http://i66.tinypic.com/n6dmj4.jpg', //Placeholder Pic
+  	img: 'http://i64.tinypic.com/1539tt2.jpg', 
   	name: 'Mimi N',
 	fact: 'I like eating stir fried squash and deep fried tofu. I also really like eating Chicken Bakes from Costco [: ',
 	drink: 'Coffee Milk Tea w boba',
@@ -346,7 +358,7 @@ var obj = [
 	place: '7 leaves'
 },
 {
-  	img: 'http://i63.tinypic.com/15psu2s.jpg', 
+  	img: 'http://i67.tinypic.com/2hzr7rk.jpg', 
   	name: 'Lindsey W',
 	fact: 'being able to play the ukulele',
 	drink: 'oolong with cream',
