--- a/findfriends.html
+++ b/findfriends.html
@@ -125,7 +125,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-      <img src="https://s-media-cache-ak0.pinimg.com/originals/52/31/c8/5231c8878862a462b93c3cc4e651b242.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://ih0.redbubble.net/image.13436859.4533/sticker,375x360.u2.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p></p>
