--- a/findfriends.html
+++ b/findfriends.html
@@ -125,7 +125,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-      <img src="http://ih0.redbubble.net/image.13436859.4533/sticker,375x360.u2.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="https://appstickers-cdn.appadvice.com/1207588875/821021142/ca4307fe39c14df47c504bc1a2d80825-4.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p></p>
