--- a/findfriends.html
+++ b/findfriends.html
@@ -358,6 +358,13 @@ var obj = [
 	place: '7 leaves'
 },
 {
+  	img: 'http://i67.tinypic.com/nlajhl.jpg', //placeholder pic
+  	name: 'Michaela L',
+	fact: 'loving dogs',
+	drink: 'milk tea w/ boba',
+	place: 'Eggettes'
+},
+{
   	img: 'http://i67.tinypic.com/2hzr7rk.jpg', 
   	name: 'Lindsey W',
 	fact: 'being able to play the ukulele',
@@ -367,7 +374,7 @@ var obj = [
 ];
 
 function changeText() {
-	var num = Math.floor(Math.random() * 28);
+	var num = Math.floor(Math.random() * 29);
 	document.getElementById('img').src = obj[num].img; 
 	document.getElementById('name').innerHTML = ":) Matched! Hi, I'm "+ obj[num].name + ".";
 	document.getElementById('fact').innerHTML = " Besides "+ obj[num].fact + ",";
