--- a/findfriends.html
+++ b/findfriends.html
@@ -276,7 +276,7 @@ var obj = [
 {
   	img: 'http://i64.tinypic.com/1539tt2.jpg', 
   	name: 'Mimi N',
-	fact: 'I like eating stir fried squash and deep fried tofu. I also really like eating Chicken Bakes from Costco [: ',
+	fact: 'liking to eat stir fried squash/deep fried tofu, and eating Chicken Bakes from Costco [: ',
 	drink: 'Coffee Milk Tea w boba',
 	place: 'Tiger Tea'
 },
@@ -358,7 +358,7 @@ var obj = [
 	place: '7 leaves'
 },
 {
-  	img: 'http://i67.tinypic.com/nlajhl.jpg', //placeholder pic
+  	img: 'http://i67.tinypic.com/nlajhl.jpg',
   	name: 'Michaela L',
 	fact: 'loving dogs',
 	drink: 'milk tea w/ boba',
