--- a/findfriends.html
+++ b/findfriends.html
@@ -204,7 +204,8 @@ var obj = [
 	place: 'Teaspoon'
 },
 {
-  	img: 'http://i65.tinypic.com/25u5t8n.jpg',
+	//http://i65.tinypic.com/25u5t8n.jpg'
+  	img: 'https://www.flickr.com/photos/emahenry/33754382873/in/dateposted-public/',
   	name: 'Tiffany Y',
 	fact: 'having more testosterone than most men',
 	drink: '0% sugar, no ice, iced jasmine milk green tea with boba',
