--- a/findfriends.html
+++ b/findfriends.html
@@ -204,9 +204,8 @@ var obj = [
 	place: 'Teaspoon'
 },
 {
-	//http://i65.tinypic.com/25u5t8n.jpg'
-  	img: <a data-flickr-embed="true"  href="https://www.flickr.com/photos/emahenry/33754382873/in/dateposted-public/" title="_MG_2030"><img src="https://c1.staticflickr.com/5/4194/33754382873_c8fd635d4b_k.jpg" width="2048" height="1365" alt="_MG_2030"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>,
-  	name: 'Tiffany Y',
+	img:'	http://i65.tinypic.com/25u5t8n.jpg',
+	name: 'Tiffany Y',
 	fact: 'having more testosterone than most men',
 	drink: '0% sugar, no ice, iced jasmine milk green tea with boba',
 	place: 'T4'
