--- a/findfriends.html
+++ b/findfriends.html
@@ -203,8 +203,8 @@ var obj = [
 	drink: 'Jasmine Milk Tea with no toppings',
 	place: 'Teaspoon'
 },
-{ //'http://i65.tinypic.com/25u5t8n.jpg'
-	img:  '[url=https://flic.kr/p/TqL33v][img]https://c1.staticflickr.com/5/4194/33754382873_c576da4577_o.jpg[/img][/url][url=https://flic.kr/p/TqL33v]_MG_2030[/url] by [url=https://www.flickr.com/photos/emahenry/]Ema Henry[/url]',
+{ //
+	img:  'http://i65.tinypic.com/25u5t8n.jpg',
 	name: 'Tiffany Y',
 	fact: 'having more testosterone than most men',
 	drink: '0% sugar, no ice, iced jasmine milk green tea with boba',
