--- a/findtea.html
+++ b/findtea.html
@@ -99,8 +99,8 @@
   <h3 class="margin">Our Current Tea Picks</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Honey Milk Tea at ShareTea</p>
-       <img src="https://s3-media1.fl.yelpcdn.com/bphoto/6kKwEb1kokA161ugozwuTw/ls.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Winnie the Pooh at Etea</p>
+       <img src="http://i64.tinypic.com/28vuh.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Liquid Gold at Teaspoon</p>
