--- a/findtea.html
+++ b/findtea.html
@@ -100,7 +100,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Winnie the Pooh at Etea</p>
-       <img src="http://i68.tinypic.com/2uop26a.jpg" style="width:100%" alt="Image">
+       <img src="http://i68.tinypic.com/2m4dgtd.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Liquid Gold at Teaspoon</p>
