--- a/findfriends.html
+++ b/findfriends.html
@@ -341,7 +341,7 @@ var obj = [
 	place: 'T4'
 },	
 {
-  	img: 'http://tinyurl.com/mku6gmb', 
+  	img: 'https://www.facebook.com/photo.php?fbid=538011126338095&set=a.102217743250771.2866.100003876368743&type=3&source=11&referrer_profile_id=100003876368743', 
   	name: 'Brandon L',
 	fact: 'being a politics junkie (ahem)',
 	drink: 'Jasmine Milk Tea w Boba',
