--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
-  <img src="https://img.clipartfest.com/55f5cb6a07e90e5c4c5d2219244f08c5_guide-boba-tea-clip-art_648-765.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="http://tinypic.com/view.php?pic=256cl90&s=9" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>“Always down to spill the tea”</h3>
 </div>
 
