--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
-  <img src="http://tinypic.com/view.php?pic=256cl90&s=9" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="http://tinypic.com/view.php?pic=256cl90&s=9">
+  <!--class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350"-->
   <h3>“Always down to spill the tea”</h3>
 </div>
 
