--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
   <!--img src="http://tinypic.com/view.php?pic=256cl90&s=9"-->
-  <a href="http://tinypic.com?ref=256cl90" target="_blank"><img src="http://i66.tinypic.com/256cl90.jpg" border="0" alt="FRENTEA logo"></a>
+  <img src="http://i66.tinypic.com/256cl90.jpg" border="0" alt="FRENTEA logo">
   <!--class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350"-->
   <h3>“Always down to spill the tea”</h3>
 </div>
