--- a/index.html
+++ b/index.html
@@ -77,9 +77,18 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
-  <!--img src="http://tinypic.com/view.php?pic=256cl90&s=9"-->
-  <img src="http://i66.tinypic.com/256cl90.jpg" border="0" alt="FRENTEA logo">
-  <!--class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350"-->
+  <div class="row">
+    <div class="col-sm-4">
+      <p></p>  
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+      <img src="http://i66.tinypic.com/256cl90.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo"> style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p></p>
+    </div>
+  </div>
   <h3>“Always down to spill the tea”</h3>
 </div>
 
