--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/food-drinks-color-1/128/bubble-tea-2-128.png">
+  <link rel="icon" href="http://i66.tinypic.com/256cl90.jpg">
+  <!--link rel="icon" href="https://cdn3.iconfinder.com/data/icons/food-drinks-color-1/128/bubble-tea-2-128.png"-->
   <title> Frentea </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
