--- a/findtea.html
+++ b/findtea.html
@@ -99,12 +99,13 @@
   <h3 class="margin">Our Current Tea Picks</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Winnie the Pooh at Etea</p>
+      <p>Lychee Milk Tea at Mr. T Cafe</p>
        <img src="http://i68.tinypic.com/2m4dgtd.jpg" style="width:100%" alt="Image">
     </div>
+    http://i64.tinypic.com/21dlvuc.jpg
     <div class="col-sm-4"> 
-      <p>Liquid Gold at Teaspoon</p>
-      <img src="https://s3-media4.fl.yelpcdn.com/bphoto/ZlUUVCrD0vCochJnmSIIxA/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Winnie the Pooh at Etea</p>
+      <img src="http://i64.tinypic.com/21dlvuc.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Thai Milk Tea at Bambu</p>
