--- a/findtea.html
+++ b/findtea.html
@@ -83,7 +83,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">FIND TEA</h3>
-  <img src="http://i64.tinypic.com/flapuw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Find Tea" width="350" height="350">
+  <img src="http://i64.tinypic.com/flapuw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Find Tea" style="width:100%">
   <h3>Frentea users' most popular boba location is... T4! Map below :)</h3>
   <!--<input type="button" id="btnSearch" value="Search" onclick="GetValue();" />
   <p id="message" ></p> -->
@@ -102,7 +102,6 @@
       <p>Lychee Milk Tea at Mr. T Cafe</p>
        <img src="http://i68.tinypic.com/2m4dgtd.jpg" style="width:100%" alt="Image">
     </div>
-    http://i64.tinypic.com/21dlvuc.jpg
     <div class="col-sm-4"> 
       <p>Winnie the Pooh at Etea</p>
       <img src="http://i64.tinypic.com/21dlvuc.jpg" style="width:100%" alt="Image">
