--- a/findtea.html
+++ b/findtea.html
@@ -82,7 +82,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">FIND TEA</h3>
+  <!--<h3 class="margin">Find Tea</h3>-->
   <img src="http://i64.tinypic.com/flapuw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Find Tea" style="width:100%">
   <h3>Frentea users' most popular boba location is... T4! Map below :)</h3>
   <!--<input type="button" id="btnSearch" value="Search" onclick="GetValue();" />
