--- a/findtea.html
+++ b/findtea.html
@@ -83,7 +83,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <!--<h3 class="margin">Find Tea</h3>-->
-  <img src="http://i66.tinypic.com/2vrud78.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Find Tea" style="width:100%">
+  <img src="http://i64.tinypic.com/14sljl5.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Find Tea" style="width:100%">
   <h3>Frentea users' most popular boba location is... T4! Map below :)</h3>
   <!--<input type="button" id="btnSearch" value="Search" onclick="GetValue();" />
   <p id="message" ></p> -->
