--- a/findfriends.html
+++ b/findfriends.html
@@ -305,7 +305,7 @@ var obj = [
 	place: 'Tiger Tea'
 },
 {
-  	img: 'http://i63.tinypic.com/15psu2s.jpg', 
+  	img: 'http://i68.tinypic.com/23rob3l.jpg', 
   	name: 'Bethany W',
 	fact: 'loving tea',
 	drink: 'Jasmine milk tea w boba',
