--- a/findtea.html
+++ b/findtea.html
@@ -108,7 +108,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Thai Milk Tea at Bambu</p>
-      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image" height = "500">
+      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" style="width:100%" alt="Image" height = "500">
     </div>
   </div>
 </div>
