--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-      <img src="http://i68.tinypic.com/155geub.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:100%" alt="Image">
+      <img src="http://i68.tinypic.com/155geub.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:100%" alt="Image" height = "500">
     </div>
     <div class="col-sm-4"> 
       <p></p>
