--- a/more.html
+++ b/more.html
@@ -76,7 +76,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h1 class="margin">Welcome to the Easter Egg page! -Chris</h1>
+ <h1 class="margin">Welcome to the Easter Egg page!</h1>
     <div class="row">
       <div class="col-sm-4"> 
         <p></p>
@@ -89,7 +89,7 @@
         <p></p>
       </div>
     </div>
- <p> Congratulations! You've found the secret page! Ice Bear, no Chris is proud of you. Sammi, Jonathan, and Donna don't actually exist. Plot twist: they have been bears in disguise the whole time. </p>
+ <p> Congratulations! You've found the secret page! Ice Bear, is proud of you. Sammi, Jonathan, and Donna don't actually exist. Plot twist: they have been bears in disguise the whole time. </p>
 </div>
 
 
@@ -134,7 +134,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Boba. Ice bear can cook this Chris doesnt like Sammi. </p> 
+  <p>Boba. Ice bear can cook this. </p> 
 </footer>
 
 </body>
