--- a/findtea.html
+++ b/findtea.html
@@ -99,16 +99,16 @@
   <h3 class="margin">Our Current Tea Picks</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lychee Milk Tea at Mr. T Cafe</p>
-       <img src="http://i68.tinypic.com/2m4dgtd.jpg" style="width:100%" alt="Image" height = "500">
+      <p>Lychee Milk Tea and Honey Green Tea at Mr.T Cafe</p>
+       <img src="http://i68.tinypic.com/140w5l4.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Winnie the Pooh at Etea</p>
-      <img src="http://i64.tinypic.com/21dlvuc.jpg" style="width:100%" alt="Image"  height="500">
+      <p> Oolong Milk Tea at Etea</p>
+      <img src="http://i66.tinypic.com/1zd6dcw.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Thai Milk Tea at Bambu</p>
-      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" style="width:100%" alt="Image" height = "500">
+      <p>Jasmine Milk Tea at Itea</p>
+      <img src="http://i65.tinypic.com/24wy6hj.jpg" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
