--- a/findtea.html
+++ b/findtea.html
@@ -99,7 +99,7 @@
   <h3 class="margin">Our Current Tea Picks</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lychee Milk Tea and Honey Green Tea at Mr.T Cafe</p>
+      <p>Lychee Honey Green Milk Tea at Mr.T Cafe</p>
        <img src="http://i68.tinypic.com/140w5l4.jpg" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
