--- a/findfriends.html
+++ b/findfriends.html
@@ -152,7 +152,9 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">CHANGE THIS TO SOMETHING LIKE A CUTE ICON</h3>
+  <h3 class="margin">
+	  <img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+  </h3>
    <div class="row">
     <div class="col-sm-4">
       <p></p>
