--- a/findfriends.html
+++ b/findfriends.html
@@ -153,7 +153,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">
-	  <img src="http://i67.tinypic.com/v8dg5d.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+	  <img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
   </h3>
    <div class="row">
     <div class="col-sm-4">
